# plover_layout_display

./: .gitignore  MANIFEST.in  README.md  README.rst  pyproject.toml  pyuic.json  setup.cfg  setup.py
fancy_tape/: fancy_tape.py
layout_display/: layout_display.py  layout_display.ui  layout_graphics.py  resources.qrc  steno_layout.py
layout_display/resources/: english_stenotype.json  resources.qrc  steno_layout.schema.json
