[metadata]
name = plover_layout_display
version = 0.1.2
description = Display the last stroke in Plover
long_description = file: README.rst
author = Ted Morin
author_email = morinted@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/morinted/plover_layout_display
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
keywords = plover plover_plugin

[options]
zip_safe = True
install_requires =
	plover>=4.0.0.dev8
	jsonschema
packages =
	layout_display

[options.entry_points]
plover.gui.qt.tool =
	layout_display = layout_display.layout_display:LayoutDisplay
